// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingBlockStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: 0;
  -moz-scroll-padding-block-start: 0;
  -ms-scroll-padding-block-start: 0;
  scroll-padding-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: 0;
  -moz-scroll-padding-block-start: 0;
  -ms-scroll-padding-block-start: 0;
  scroll-padding-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: 0;
  -moz-scroll-padding-block-start: 0;
  -ms-scroll-padding-block-start: 0;
  scroll-padding-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: 0;
  -moz-scroll-padding-block-start: 0;
  -ms-scroll-padding-block-start: 0;
  scroll-padding-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: hasnot;
  -moz-scroll-padding-block-start: hasnot;
  -ms-scroll-padding-block-start: hasnot;
  scroll-padding-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: has;
  -moz-scroll-padding-block-start: has;
  -ms-scroll-padding-block-start: has;
  scroll-padding-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: hasnot;
  -moz-scroll-padding-block-start: hasnot;
  -ms-scroll-padding-block-start: hasnot;
  scroll-padding-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: has;
  -moz-scroll-padding-block-start: has;
  -ms-scroll-padding-block-start: has;
  scroll-padding-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: invalid.path.1;
  -moz-scroll-padding-block-start: invalid.path.1;
  -ms-scroll-padding-block-start: invalid.path.1;
  scroll-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: invalid.path.1;
  -moz-scroll-padding-block-start: invalid.path.1;
  -ms-scroll-padding-block-start: invalid.path.1;
  scroll-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: invalid.path.1;
  -moz-scroll-padding-block-start: invalid.path.1;
  -ms-scroll-padding-block-start: invalid.path.1;
  scroll-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: invalid.path.1;
  -moz-scroll-padding-block-start: invalid.path.1;
  -ms-scroll-padding-block-start: invalid.path.1;
  scroll-padding-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: -54881px;
  -moz-scroll-padding-block-start: -54881px;
  -ms-scroll-padding-block-start: -54881px;
  scroll-padding-block-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: -54881px;
  -moz-scroll-padding-block-start: -54881px;
  -ms-scroll-padding-block-start: -54881px;
  scroll-padding-block-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: -42365px;
  -moz-scroll-padding-block-start: -42365px;
  -ms-scroll-padding-block-start: -42365px;
  scroll-padding-block-start: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: -42365px;
  -moz-scroll-padding-block-start: -42365px;
  -ms-scroll-padding-block-start: -42365px;
  scroll-padding-block-start: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: July;
    -moz-scroll-padding-block-start: July;
    -ms-scroll-padding-block-start: July;
    scroll-padding-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: August;
    -moz-scroll-padding-block-start: August;
    -ms-scroll-padding-block-start: August;
    scroll-padding-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: September;
    -moz-scroll-padding-block-start: September;
    -ms-scroll-padding-block-start: September;
    scroll-padding-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-start: November;
    -moz-scroll-padding-block-start: November;
    -ms-scroll-padding-block-start: November;
    scroll-padding-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: July;
    -moz-scroll-padding-block-start: July;
    -ms-scroll-padding-block-start: July;
    scroll-padding-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: August;
    -moz-scroll-padding-block-start: August;
    -ms-scroll-padding-block-start: August;
    scroll-padding-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: September;
    -moz-scroll-padding-block-start: September;
    -ms-scroll-padding-block-start: September;
    scroll-padding-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-start: November;
    -moz-scroll-padding-block-start: November;
    -ms-scroll-padding-block-start: November;
    scroll-padding-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: May;
    -moz-scroll-padding-block-start: May;
    -ms-scroll-padding-block-start: May;
    scroll-padding-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: June;
    -moz-scroll-padding-block-start: June;
    -ms-scroll-padding-block-start: June;
    scroll-padding-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: April;
    -moz-scroll-padding-block-start: April;
    -ms-scroll-padding-block-start: April;
    scroll-padding-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-start: November;
    -moz-scroll-padding-block-start: November;
    -ms-scroll-padding-block-start: November;
    scroll-padding-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: May;
    -moz-scroll-padding-block-start: May;
    -ms-scroll-padding-block-start: May;
    scroll-padding-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: June;
    -moz-scroll-padding-block-start: June;
    -ms-scroll-padding-block-start: June;
    scroll-padding-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-start: April;
    -moz-scroll-padding-block-start: April;
    -ms-scroll-padding-block-start: April;
    scroll-padding-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-start: November;
    -moz-scroll-padding-block-start: November;
    -ms-scroll-padding-block-start: November;
    scroll-padding-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-block-start: July;
    -moz-scroll-padding-block-start: July;
    -ms-scroll-padding-block-start: July;
    scroll-padding-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: August;
    -moz-scroll-padding-block-start: August;
    -ms-scroll-padding-block-start: August;
    scroll-padding-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-start: September;
    -moz-scroll-padding-block-start: September;
    -ms-scroll-padding-block-start: September;
    scroll-padding-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: November;
    -moz-scroll-padding-block-start: November;
    -ms-scroll-padding-block-start: November;
    scroll-padding-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-start: August;
    -moz-scroll-padding-block-start: August;
    -ms-scroll-padding-block-start: August;
    scroll-padding-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-block-start: July;
    -moz-scroll-padding-block-start: July;
    -ms-scroll-padding-block-start: July;
    scroll-padding-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: August;
    -moz-scroll-padding-block-start: August;
    -ms-scroll-padding-block-start: August;
    scroll-padding-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-start: September;
    -moz-scroll-padding-block-start: September;
    -ms-scroll-padding-block-start: September;
    scroll-padding-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: November;
    -moz-scroll-padding-block-start: November;
    -ms-scroll-padding-block-start: November;
    scroll-padding-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-start: August;
    -moz-scroll-padding-block-start: August;
    -ms-scroll-padding-block-start: August;
    scroll-padding-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-block-start: January;
    -moz-scroll-padding-block-start: January;
    -ms-scroll-padding-block-start: January;
    scroll-padding-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: December;
    -moz-scroll-padding-block-start: December;
    -ms-scroll-padding-block-start: December;
    scroll-padding-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-start: April;
    -moz-scroll-padding-block-start: April;
    -ms-scroll-padding-block-start: April;
    scroll-padding-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: May;
    -moz-scroll-padding-block-start: May;
    -ms-scroll-padding-block-start: May;
    scroll-padding-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-start: June;
    -moz-scroll-padding-block-start: June;
    -ms-scroll-padding-block-start: June;
    scroll-padding-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-block-start: January;
    -moz-scroll-padding-block-start: January;
    -ms-scroll-padding-block-start: January;
    scroll-padding-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: December;
    -moz-scroll-padding-block-start: December;
    -ms-scroll-padding-block-start: December;
    scroll-padding-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-start: April;
    -moz-scroll-padding-block-start: April;
    -ms-scroll-padding-block-start: April;
    scroll-padding-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-start: May;
    -moz-scroll-padding-block-start: May;
    -ms-scroll-padding-block-start: May;
    scroll-padding-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-start: June;
    -moz-scroll-padding-block-start: June;
    -ms-scroll-padding-block-start: June;
    scroll-padding-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: 54881px;
  -moz-scroll-padding-block-start: 54881px;
  -ms-scroll-padding-block-start: 54881px;
  scroll-padding-block-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: 54881px;
  -moz-scroll-padding-block-start: 54881px;
  -ms-scroll-padding-block-start: 54881px;
  scroll-padding-block-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: 42365px;
  -moz-scroll-padding-block-start: 42365px;
  -ms-scroll-padding-block-start: 42365px;
  scroll-padding-block-start: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: 42365px;
  -moz-scroll-padding-block-start: 42365px;
  -ms-scroll-padding-block-start: 42365px;
  scroll-padding-block-start: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: July;
  -moz-scroll-padding-block-start: July;
  -ms-scroll-padding-block-start: July;
  scroll-padding-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: July;
  -moz-scroll-padding-block-start: July;
  -ms-scroll-padding-block-start: July;
  scroll-padding-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: June;
  -moz-scroll-padding-block-start: June;
  -ms-scroll-padding-block-start: June;
  scroll-padding-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: June;
  -moz-scroll-padding-block-start: June;
  -ms-scroll-padding-block-start: June;
  scroll-padding-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-start: DarkSlateBlue;
  -moz-scroll-padding-block-start: DarkSlateBlue;
  -ms-scroll-padding-block-start: DarkSlateBlue;
  scroll-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: DarkSlateBlue;
  -moz-scroll-padding-block-start: DarkSlateBlue;
  -ms-scroll-padding-block-start: DarkSlateBlue;
  scroll-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: DarkSlateBlue;
  -moz-scroll-padding-block-start: DarkSlateBlue;
  -ms-scroll-padding-block-start: DarkSlateBlue;
  scroll-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-start: DarkSlateBlue;
  -moz-scroll-padding-block-start: DarkSlateBlue;
  -ms-scroll-padding-block-start: DarkSlateBlue;
  scroll-padding-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
